--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "react-isotope": "^1.0.7",
         "react-router-dom": "^6.3.0",
         "react-scripts": "5.0.1",
+        "react-scroll": "^1.8.7",
         "react-select": "^5.3.2",
         "react-spring": "^9.4.5",
         "swiper": "^8.2.2",
